# PRICES-PREDICTION-SYSTEM

./: .gitignore  .replit  LICENSE  README.md  Vegetable_prices_pred.csv  app.py  database.env  model.py  pyproject.toml  requirements.txt  result  vegetableprediction.py  vegtableprediction.py
templates/: bootstrap.html  contactus.html  crops.html  example.html  final.html  footer.html  homenav.html  homepage.html  index.html  indexnav.html  kharif.html  localmarkets.html  login.html  nav.html  predator.html  prediction.html  rabi.html  received.html  signup.html  style.css  vegetable.html  zaid.html
user/: models.py
