[tool.poetry]
name = "repl-nix-profile-jayakrishna"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]
readme = "README.md"
packages = [{include = "repl_nix_profile_jayakrishna"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
flask-pymongo = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"